[package]
name = "mos-hardware"
version = "0.1.9"
edition = "2021"
authors = ["Mikael Lund <lyssky@icloud.com>"]
homepage = "https://github.com/mlund/mos-hardware"
documentation = "https://docs.rs/mos-hardware"
repository = "https://github.com/mlund/mos-hardware"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["c64", "mega65", "8-bit", "llvm-mos", "6502"]
categories = ["embedded", "no-std"]
description = "Hardware register tables and support functions for 8-bit retro computers like the Commodore 64, MEGA65 and others."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
lto = true
opt-level = 2
debug = 2
codegen-units = 1

[profile.release]
opt-level = "s"
lto = true
debug = 2

[lib]
doctest = false

[dependencies]
memoffset = {version = "0.7.1", features = ["unstable_const"]}
static_assertions = "1.1.0"
bitflags = "1.3.2"
volatile-register = "0.2.1"
itertools = {version = "0.10.3", default-features = false}
mos-alloc = "0.2.0"
const-str = "0.5.3"

[build-dependencies]
cc = "1"
bindgen = "0.63.0"

[dev-dependencies]
ufmt-stdio = "0"

[features]
docs-rs = []

[package.metadata.docs.rs]
features = [ "docs-rs" ]
