[package]
name = "mos-hardware"
version = "0.2.0"
edition = "2021"
authors = ["Mikael Lund <lyssky@icloud.com>"]
homepage = "https://github.com/mlund/mos-hardware"
documentation = "https://docs.rs/mos-hardware"
repository = "https://github.com/mlund/mos-hardware"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["c64", "mega65", "8-bit", "llvm-mos", "6502"]
categories = ["embedded", "no-std"]
description = "Hardware register tables and support functions for 8-bit retro computers like the Commodore 64, MEGA65 and others."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
lto = true
opt-level = 2
debug = 2
codegen-units = 1

[profile.release]
opt-level = "s"
lto = true
debug = 2
panic = "abort"

[lib]
doctest = false

[dependencies]
memoffset = {version = "0.9", features = ["unstable_const"]}
static_assertions = "1.1"
bitflags = "1.3"
volatile-register = "0.2"
const-str = "0.5"
rand_core = "0.6"
genio = {version = "0.2", default-features = false}

[dev-dependencies]
rand = {version = "0.8", default-features = false}
itertools = {version = "0.10", default-features = false}
mos-alloc = "0.2"
ufmt-stdio = "0.3"

[build-dependencies]
cc = { version = "1.0", optional = true }
bindgen = { version = "0.65.1", optional = true }

[features]
default = ["c64", "cx16", "mega65", "petscii", "vera", "sid", "vic2"]
docs-rs = []
cia = []
c64 = ["cc", "cia", "petscii", "sid", "vic2"]
cx16 = ["cia", "petscii", "vera"]
mega65 = ["cc", "bindgen", "petscii", "sid", "vic2"]
petscii = []
vera = []
sid = []
vic2 = []

[package.metadata.docs.rs]
features = [ "docs-rs" ]
